Fix color input

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <div class="separator"></div>
 
         <label for="color_input">Color</label>
-        <input type="color" name="" id="">
+        <input type="color" id="color_input">
         <label for="title_input">Title</label>
         <input type="text" placeholder="Some title" id="title_input">
         <label for="description">Description</label>
