Move JS to root

--- a/index.html
+++ b/index.html
@@ -148,6 +148,6 @@
         </div>
     </form>
 
-    <script src="resources/js/dist/app.js"></script>
+    <script src="dist/app.js"></script>
 </body>
 </html>
