Add missing preview_ and remove test button

--- a/index.html
+++ b/index.html
@@ -68,12 +68,12 @@
                         </div>
                         <div class="img_element">
                             <div class="wrapper">
-                                <img src="resources/images/default profile picture.png" alt="" id="image">
+                                <img src="resources/images/default profile picture.png" alt="" id="preview_image">
                             </div>
                         </div>
                         <div class="footer">
                             <div class="img">
-                                <img src="resources/images/default profile picture.png" alt="" id="footer_icon">
+                                <img src="resources/images/default profile picture.png" alt="" id="preview_footer_icon">
                                 
                             </div>
                             <p class="text"><span id="preview_footer_text">Some footer text here</span></p>
@@ -84,7 +84,6 @@
                 </div>
             </div>
         </div>
-        <button id="test_button">Test</button>
     </div>
     <form action="#">
         <h1>Setup your custom embed.</h1>
