--- a/index.html
+++ b/index.html
@@ -30,18 +30,18 @@
                 <div class="inner">
                     <div class="thumbnail">
                         <div class="wrapper">
-                            <img src="resources/images/default profile picture.png" alt="">
+                            <img src="resources/images/default profile picture.png" alt="" id="preview_thumbnail">
                         </div>
                     </div>
                     <div class="main_content">
                         <div class="name_wrapper">
                             <div class="img">
-                                <img src="resources/images/default profile picture.png" alt="" srcset="">
+                                <img src="resources/images/default profile picture.png" alt="" srcset="" id="preview_author_icon">
                             </div>
                             <p class="name"><span id="preview_author_name">Some name</span></p>
                         </div>
-                        <div class="title clickable">
-                            <span id="preview_title">Some title</span>
+                        <div class="title">
+                            <a href="" id="preview_url"><span id="preview_title">Some title</span></a>
                         </div>
                         <div class="description">
                             <span id="preview_description">Some description here</span>
@@ -78,7 +78,7 @@
                             </div>
                             <p class="text"><span id="preview_footer_text">Some footer text here</span></p>
                             <span class="decoration"></span>
-                            <div class="timestamp"><span id="timestamp">01/01/2022</span></div>
+                            <div class="timestamp"><span id="preview_timestamp">01/01/2022</span></div>
                         </div>
                     </div>
                 </div>
