--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             </div>
         </div>
     </div>
-    <form action="#">
+    <form onsubmit="return false">
         <h1>Setup your custom embed.</h1>
         <p>Customize your embed from A to Z and export it in the language you want!</p>
         
