feat: Add export ui

--- a/index.html
+++ b/index.html
@@ -140,6 +140,27 @@
                 <label>Auto</label>
             </div>
         </div>
+        <div class="separator"></div>
+        <div class="export">
+            <label>Export</label>
+            <div class="export_inline">
+                <div class="select open">
+                    <div class="view">
+                        <span class="disabled">Choose the language</span>
+                        <div class="arrow">
+                            <span></span><span></span>
+                        </div>
+                    </div>
+                    <div class="categories">
+                        <div class="cat">Javascript</div>
+                        <div class="cat">Java</div>
+                        <div class="cat">Python</div>
+                    </div>
+                </div>
+                <button class="btn green">Exporter</button>
+            </div>
+            <div id="out"></div>
+        </div>
     </form>
 
     <script src="dist/app.js"></script>
