--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                         <div class="cat">Python</div>
                     </div>
                 </div>
-                <button class="btn green">Exporter</button>
+                <button class="btn green">Export</button>
             </div>
             <div id="out"></div>
         </div>
