--- a/index.html
+++ b/index.html
@@ -144,20 +144,9 @@
         <div class="export">
             <label>Export</label>
             <div class="export_inline">
-                <div class="select open">
-                    <div class="view">
-                        <span class="disabled">Choose the language</span>
-                        <div class="arrow">
-                            <span></span><span></span>
-                        </div>
-                    </div>
-                    <div class="categories">
-                        <div class="cat">Javascript</div>
-                        <div class="cat">Java</div>
-                        <div class="cat">Python</div>
-                    </div>
-                </div>
-                <button class="btn green">Export</button>
+                <select id="export_select" style="display: none;">
+                </select>
+                <button class="btn green" onclick="exp()">Export</button>
             </div>
             <div id="out"></div>
         </div>
