Fix out section

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                 </select>
                 <button class="btn green" onclick="exp()">Export</button>
             </div>
-            <div id="out"></div>
+            <pre id="out"></pre>
         </div>
     </form>
 
