--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Embed generator</title>
     <link rel="shortcut icon" href="resources/images/default profile picture.png" type="image/x-icon">
-    <link rel="stylesheet" href="resources/css/style.css">
+    <link rel="stylesheet" href="dist/css/style.css">
 </head>
 <body>
     <div class="preview">
@@ -152,6 +152,6 @@
         </div>
     </form>
 
-    <script src="dist/app.js"></script>
+    <script src="dist/js/app.js"></script>
 </body>
 </html>
