--- a/index.html
+++ b/index.html
@@ -25,64 +25,10 @@
                     Aujourd'hui à 20:15
                 </div>
             </div>
-            <div class="embed">
+            <div class="embed" id="preview">
                 <div class="colored_line" id="preview_color"></div>
                 <div class="inner">
-                    <div class="thumbnail">
-                        <div class="wrapper">
-                            <img src="resources/images/default profile picture.png" alt="" id="preview_thumbnail">
-                        </div>
-                    </div>
-                    <div class="main_content">
-                        <div class="name_wrapper">
-                            <div class="img">
-                                <img src="resources/images/default profile picture.png" alt="" srcset="" id="preview_author_icon">
-                            </div>
-                            <p class="name"><span id="preview_author_name">Some name</span></p>
-                        </div>
-                        <div class="title">
-                            <a href="" id="preview_url"><span id="preview_title">Some title</span></a>
-                        </div>
-                        <div class="description">
-                            <span id="preview_description">Some description here</span>
-                        </div>
-                        <div id="fields">
-                            <div class="field_zone">
-                                <div class="field">
-                                    <div class="field_name">Regular field title</div>
-                                    <div class="field_value">Some value here</div>
-                                </div>
-                            </div>
-                            <div class="field_zone">
-                                <div class="field">
-                                    <div class="field_name">Inline field title</div>
-                                    <div class="field_value">Some value here</div>
-                                </div>
-                                <div class="field">
-                                    <div class="field_name">Inline field title</div>
-                                    <div class="field_value">Some value here</div>
-                                </div>
-                                <div class="field">
-                                    <div class="field_name">Inline field title</div>
-                                    <div class="field_value">Some value here</div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="img_element">
-                            <div class="wrapper">
-                                <img src="resources/images/default profile picture.png" alt="" id="preview_image">
-                            </div>
-                        </div>
-                        <div class="footer">
-                            <div class="img">
-                                <img src="resources/images/default profile picture.png" alt="" id="preview_footer_icon">
-                                
-                            </div>
-                            <p class="text"><span id="preview_footer_text">Some footer text here</span></p>
-                            <span class="decoration"></span>
-                            <div class="timestamp"><span id="preview_timestamp">01/01/2022</span></div>
-                        </div>
-                    </div>
+                    
                 </div>
             </div>
         </div>
