--- a/src/html/index.html
+++ b/src/html/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Embed generator</title>
-    <link rel="shortcut icon" href="resources/images/default profile picture.png" type="image/x-icon">
+    <link rel="shortcut icon" href="resources/images/avatar.png" type="image/x-icon">
     <link rel="stylesheet" href="dist/css/style.css">
 </head>
 <body>
