--- a/src/html/sections/preview.html
+++ b/src/html/sections/preview.html
@@ -1,7 +1,7 @@
 <div class="message">
     <div class="user_profile">
         <div class="inner">
-            <img src="resources/images/default profile picture.png" alt="Photo de profil du bot">
+            <img src="resources/images/avatar.png" alt="Photo de profil du bot">
         </div>
     </div>
     <div class="user_infos">
